--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,20 @@
 # SITE CONFIGURATION
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://example.com" # the base hostname & protocol for your site
+url: "https://doppioandante.github.io" # the base hostname & protocol for your site
 
 # THEME-SPECIFIC CONFIGURATION
 theme:
   # Meta
   title: 何時?
   gravatar: # Email MD5 hash
-  description: "Random thoughts about random things" # used by search engines
+  description: "Random thoughts about technology, science and everything" # used by search engines
 
   # Header and footer text
   #header_text: >
   #   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
   #   <p>Remove all header text in <code>_config.yml</code> to disable this feature.</p>
-  #header_text_feature_image:
+  header_image: img/snail.jpg
   footer_text: >
    Powered by <a href="http://jekyllrb.com">Jekyll</a> with <a href="https://rohanchandra.github.io/project/type/">Type Theme</a>
 
