--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,8 @@ theme:
   youtube:
 
   # Scripts
-  google_analytics: # Tracking ID, e.g. "UA-000000-01"
-  disqus_shortname:
+  google_analytics: UA-63229624-1
+  disqus_shortname: doppioandantegithubio
   katex: true # Enable if using math markup
 
   # Localization strings
