--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: "https://doppioandante.github.io" # the base hostname & protocol for your s
 theme:
   # Meta
   title: 何時?
-  gravatar: # Email MD5 hash
+  gravatar: 9ba8d87f9d794def7d0ec1ca4a4d2eb9
   description: "Random thoughts about technology, science and everything" # used by search engines
 
   # Header and footer text
