--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ theme:
   youtube:
 
   # Scripts
-  google_analytics: UA-63229624-1
+  google_analytics: #UA-63229624-1
   disqus_shortname: doppioandantegithubio
   katex: true # Enable if using math markup
 
